# Nexasecure

./: Readme.md  Readme.txt  ca-key.pem  ca.pem  ca.srl  docker-compose.yml  key.csr  secret.yaml
hardwarewallet/memdb/: go.mod  main.go
hardwarewallet/memory/: Cargo.toml
hardwarewallet/memory/src/: main.rs  token.rs
hardwarewallet/server/: Cargo.toml
hardwarewallet/server/src/: main.rs
hardwarewallet/wallet/: Cargo.toml
hardwarewallet/wallet/src/: handlers.rs  main.rs  models.rs  storage.rs
microservice_router/: Cargo.toml  dockerfile
microservice_router/src/: main.rs
nexasecure-server/2FA/: Requirment.txt  genarate_OTP.py  main.py
nexasecure-server/auth-blockchain/: .env  .env.example  DOT.py  block.py  blockchain.py  bun.lockb  change_own.py  data.py  go.mod  hardwarewallet.js  main.go  main.py  package-lock.json  package.json  server.js  token.sol  truffle-config.js
nexasecure-server/auth-blockchain/contracts/: AuthToken.sol  (+1 more)
nexasecure-server/auth-server/: Dockerfile  go.mod  go.sum  server.go  sqlc.yaml
nexasecure-server/blockchainserver/: .env  app.js  bun.lockb  package-lock.json  package.json
nexasecure-server/request-blockchain/: dockerfile  go.mod  main.go
nexasecure-server/request-token-server/: go.mod  server.go
nexasecure-server/server-main/: Cargo.toml
nft/: nft.sol  package-lock.json
nginx/: nginx.conf
nginx/certs/: cert.pem  key.pem
postgres-data/: pg_hba.conf  postgresql.auto.conf  postgresql.conf
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
(+28 files in other folders)
