[package]
name = "hardwarewallet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"
env_logger = "0.9"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.13"
log = "0.4"
actix-rt = "2.5"
